--- a/back-end/air-notes-api/package.json
+++ b/back-end/air-notes-api/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "aws-sdk": "^2.252.1"
+  },
   "devDependencies": {
     "eslint": "^4.19.1"
   }
