--- a/front-end/AirNotes/package.json
+++ b/front-end/AirNotes/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.55.4",
     "react-native-arkit": "^0.9.0",
     "react-native-elements": "^0.19.1",
+    "react-native-modal": "^6.1.0",
     "react-native-router-flux": "^4.0.0-beta.31",
     "react-native-vector-icons": "^4.6.0",
     "react-redux": "^5.0.7",
