--- a/front-end/AirNotes/package.json
+++ b/front-end/AirNotes/package.json
@@ -16,7 +16,9 @@
     "react-native-router-flux": "^4.0.0-beta.31",
     "react-native-vector-icons": "^4.6.0",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.0.1",
