--- a/back-end/air-notes-api/package.json
+++ b/back-end/air-notes-api/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "ajv": "^6.5.1",
-    "aws-sdk": "^2.252.1"
+    "aws-sdk": "^2.252.1",
+    "serverless-python-requirements": "^4.1.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1"
