--- a/front-end/AirNotes/package.json
+++ b/front-end/AirNotes/package.json
@@ -20,7 +20,8 @@
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-promise": "^0.6.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^3.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.0.1",
